--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: 10.3.0
 
+  animated_splash_screen: ^1.3.0
+  shared_preferences: ^2.0.20
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -62,8 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/JYS-Survey_logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -91,3 +95,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_native_splash:
+  color: "#FFFFFF" 
+  # image: 'assets/images/JYS-Survey_logo.png'
