--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/JYS-Survey_logo.png
+    - assets/images/JYS-Survey_logo.png
+    - assets/images/profile.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
