--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   animated_splash_screen: ^1.3.0
   shared_preferences: ^2.0.20
 
+  intl: ^0.19.0
+
 
 dev_dependencies:
   flutter_test:
